--- a/HttpInterface/HttpInterface/HttpInterface.vcxproj
+++ b/HttpInterface/HttpInterface/HttpInterface.vcxproj
@@ -151,10 +151,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="httpHeader.h" />
     <ClInclude Include="HttpInterface.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="httpHeader.cpp" />
     <ClCompile Include="HttpInterface.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
