--- a/HttpInterface/HttpInterface/HttpInterface.vcxproj.filters
+++ b/HttpInterface/HttpInterface/HttpInterface.vcxproj.filters
@@ -21,12 +21,18 @@
     <ClInclude Include="HttpInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="httpHeader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="HttpInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="httpHeader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
