--- a/HttpInterface/HttpInterface/HttpInterface.vcxproj.filters
+++ b/HttpInterface/HttpInterface/HttpInterface.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="httpHeader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
