--- a/HttpInterface/HttpInterface/HttpInterface.vcxproj.filters
+++ b/HttpInterface/HttpInterface/HttpInterface.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClInclude Include="tool.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WinNetHttp.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="server.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -36,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="httpHeader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WinNetHttp.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
