--- a/HttpInterface/HttpInterface/HttpInterface.vcxproj
+++ b/HttpInterface/HttpInterface/HttpInterface.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="HttpInterface.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="server.h" />
+    <ClInclude Include="socketHttp.h" />
     <ClInclude Include="tool.h" />
     <ClInclude Include="WinNetHttp.h" />
   </ItemGroup>
@@ -167,6 +168,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="socketHttp.cpp" />
     <ClCompile Include="WinNetHttp.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
